--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "dipper",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A state machine library for javascript",
   "main": "index.js",
+  "types": "lib/index",
   "scripts": {
     "start": "npm run build:live",
     "build": "tsc -p .",
