--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "dipper",
+  "name": "dipper.js",
   "version": "0.0.1",
-  "description": "A state machine library for javascript",
+  "description": "A state machine library for TypeScript",
   "main": "index.js",
   "types": "lib/index",
   "scripts": {
     "start": "npm run build:live",
-    "build": "tsc -p .",
-    "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf lib/* ; tsc -p .",
+    "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/examples/run-examples.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "publisher": "npm run build ; npm publish",
+    "publisher:force": "npm unpublish --force ; npm run publisher"
   },
   "keywords": [
     "state",
@@ -24,8 +26,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^10.12.18",
+    "node-emoji": "^1.8.1",
     "nodemon": "^1.18.9",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2"
-  }
+  },
+  "dependencies": {
+    "rxjs": "^6.3.3"
+  },
+  "publishConfig": {
+    "registry": "http://npm.caps.ua.edu/"
+  },
+  "files": [
+    "/lib/dipper"
+  ]
 }
