--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dipper.js",
-  "version": "0.1.0",
+  "version": "0.2.0-0",
   "description": "A state machine library for TypeScript",
   "main": "lib/index.js",
   "types": "lib/index/d/ts",
