--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^10.12.21",
     "node-emoji": "^1.8.1",
     "nodemon": "^1.18.9",
+    "npm-bump": "0.0.25",
     "ts-node": "^7.0.1",
     "typescript": "^3.3.1"
   },
