--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dipper.js",
-  "version": "0.3.2-pre",
+  "version": "0.3.2",
   "description": "Tiny event-driven finite state machine library for TypeScript/JavaScript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
